--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -92,3 +92,9 @@ set -g @resurrect-strategy-vim "session"
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
+
+# set shell
+set -g default-shell /bin/zsh
+
+# Retach userspaces
+set -g default-command "reattach-to-user-namespace -l zsh"
